Factor out the CSS for the "start" and "stop" labels
And uniformly reduce the whitespace between them and the numbers.

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -150,6 +150,16 @@
 .slice-diagram-not-selected {
     color: var(--color-slice-diagram-not-selected);
 }
+.slice-diagram-index-label-selected {
+    line-height: 0em;
+    vertical-align: top;
+    color: var(--color-slice-diagram-selected);
+}
+.slice-diagram-index-label-not-selected {
+    line-height: 0em;
+    vertical-align: top;
+    color: var(--color-slice-diagram-not-selected);
+}
 .circle-red,
 .circle-blue {
     display: inline-block;
